# cuxray

./: .gitignore  PLAN.md  README.md  action.yml  pyproject.toml
.claude/skills/cuxray/: SKILL.md
.github/workflows/: ci.yml
bench/: CAMPAIGN.md  UPSTREAM.md  gemv_vllm.cu  gemv_w4a16.cu
schema/: cuxray.schema.1.json
src/cuxray/: __init__.py  advise.py  archspec.py  cli.py  diffgate.py  ingest.py  mcp_server.py  occupancy.py  render.py  report.py  sarif.py  toolchain.py  triton.py  tune.py  tunematrix.py
src/cuxray/analyze/: access.py  crossover.py  dataflow.py  lanevalue.py  liveness.py  perfmodel.py  roofline.py  schedule.py  solver.py  spillmap.py  whytrace.py
src/cuxray/parse/: cfgdot.py  ctrl.py  elf.py  ptxasv.py  resusage.py  sass.py
src/cuxray/schema/: cuxray.commands.1.json
tests/: test_access.py  test_advise.py  test_analyze.py  test_calibration.py  test_cli.py  test_ctrl.py  test_elf_toolchain.py  test_occupancy.py  test_occupancy_differential.py  test_parsers.py  test_perfmodel.py  test_schema_and_render.py  test_triton.py
tests/fixtures/: build.sh
tests/fixtures/recorded/: calibration.json  calibration_sched.chain_loop.sm_86.cfg.dot  calibration_sched.chain_loop.sm_86.cubin  calibration_sched.chain_loop.sm_86.gi.txt  calibration_sched.chain_loop.sm_86.sass.txt  elfhdr.saxpy.sm_120a.txt  elfhdr.saxpy.sm_90.txt  listelf.multiarch.txt  nvdisasm_cfg.ldsm_async.sm_90.dot  (+58 more)
tests/tools/: access_sweep.py  gen_occ_reference.py  invariant_sweep.py  occ_harness.cpp  spill_sweep.py  validate_banks.cu  validate_hw.cu  validate_ldsm.cu  validate_sched.cu
(+6 files in other folders)
