[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuxray"
version = "0.1.0"
description = "Hardware-free static analyzer for CUDA kernel binaries: source-attributed register pressure, spills, occupancy, diffs, and CI gates. No GPU required."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Kareem Fareed" }]
keywords = ["cuda", "gpu", "kernel", "sass", "occupancy", "registers", "spills", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.0"]

[project.urls]
Homepage = "https://github.com/KookiesNKareem/cuxray"
Repository = "https://github.com/KookiesNKareem/cuxray"
Issues = "https://github.com/KookiesNKareem/cuxray/issues"

[project.scripts]
cuxray = "cuxray.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cuxray"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # long lines allowed where clarity wins (tables, messages)
